--- a/tex/fy.tex
+++ b/tex/fy.tex
@@ -12,8 +12,8 @@
 \usetikzlibrary{shapes.geometric, arrows}
 \usetikzlibrary{calc}
 \usepackage[top=2cm,bottom=2cm]{geometry}
-%\setCJKmainfont{FangSong_GB2312}
-\setCJKmainfont{FangSong}
+\setCJKmainfont{FangSong_GB2312}
+%\setCJKmainfont{FangSong}
 
 %\newcounter{zwbh}
 %\begin{list}{\heiti 步骤 \chinese{zwbh}、}
